testsuite/tests/typecheck/should_fail/tcfail135.stderr

tcfail135.hs:6:23: error: [GHC-83865]
    • Expecting one more argument to ‘f’
      Expected a type, but ‘f’ has kind ‘k0 -> *’
    • In the type signature: baa :: f a -> f
      In the class declaration for ‘Foo’
